Fix scroll auth page in mobil and remove delete modal flerx dir change fab size on mobile

--- a/src/components/AuthPage/AuthPage.module.scss
+++ b/src/components/AuthPage/AuthPage.module.scss
@@ -138,7 +138,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow-y: auto;
+    max-height: 100vh;
 }
 
 .formContainer {
