--- a/src/components/DeleteConfirmationModal/DeleteConfirmationModal.module.scss
+++ b/src/components/DeleteConfirmationModal/DeleteConfirmationModal.module.scss
@@ -185,10 +185,6 @@
         font-size: 20px;
     }
 
-    .actions {
-        flex-direction: column;
-    }
-
     .cancelButton,
     .deleteButton {
         width: 100%;
