--- a/src/components/FAB/FAB.module.scss
+++ b/src/components/FAB/FAB.module.scss
@@ -32,8 +32,6 @@
         position: fixed;
         bottom: 24px;
         right: 24px;
-        width: 70px;
-        height: 70px;
 
         svg {
             width: 30px;
